{{$NEXT}}

0.038     2018-10-03 13:34:28 EDT
  - [Regenerate::AfterReleasers] will now be properly used by subclasses
  - Git tags and commits will no longer include an extraneous 'v' in the version

0.037     2018-09-20 13:12:36 EDT
  - Add perl 5.28 to travis config in minting profile

0.036     2018-06-05 17:51:17 EDT
  - Update source licensing of generated CONTRIBUTING.md

0.035     2017-08-07 12:50:59 EDT
  - Bump [Test::ReportPrereqs] dependency to 0.027 to prevent
    t/00-report-prereqs.dd from being pruned

0.034     2017-08-04 21:18:06 EDT
  - Mention installdeps command in CONTRIBUTING.md

0.033     2017-07-05 17:22:42 EDT
  - Add perl 5.26 to travis config in minting profile

0.032     2016-11-23 16:07:57 EST
  - Add irc option to set x_IRC resource metadata

0.031     2016-09-29 15:35:49 EDT
  - Regenerate files for release commit automatically

0.030     2016-09-29 15:20:00 EDT
  - Also set munge_build_pl = 0 for BumpVersionAfterRelease

0.029     2016-09-29 15:14:30 EDT
  - RewriteVersion does not modify files in tree so [Git::Commit] does not need to allow for that

0.028     2016-09-29 15:04:43 EDT
  - Regenerated files no longer need to be allowed in [Git::Check] and [Git::Commit] on release

0.027     2016-09-29 13:50:21 EDT
  - Use [Regenerate] instead of [CopyFilesFromBuild] to regenerate files in root
  - Because of this, files previously copied from the build to the repository
    during `dzil build`, `dzil test`, or `dzil release` will now require running
    `dzil regenerate` to update.

0.026     2016-07-22 02:07:45 EDT
  - Bump required version of [Test::ReportPrereqs] for Module::Metadata version extractor option

0.025     2016-07-21 14:37:00 EDT
  - Generate CONTRIBUTING.md in build and copy from build to root
  - Add basic bundle and minter tests
  - Add perl 5.24 to travis config in minting profile

0.024     2016-05-02 14:25:27 EDT
  - Use Module::Metadata as the version_extractor for Test::ReportPrereqs if